--- a/notebooks/usage-examples.ipynb
+++ b/notebooks/usage-examples.ipynb
@@ -11,6 +11,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "051d33fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install --pre unified-planning[fast-downward]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c9a5ecb4",
    "metadata": {},
    "outputs": [],
@@ -18,7 +28,7 @@
     "import unified_planning\n",
     "import up_fast_downward\n",
     "from unified_planning.shortcuts import *\n",
-    "from unified_planning.model.metrics import MinimizeSequentialPlanLength, MinimizeActionCosts"
+    "from unified_planning.model.metrics import MinimizeSequentialPlanLength"
    ]
   },
   {
@@ -236,7 +246,7 @@
    "id": "4a29f4f1",
    "metadata": {},
    "source": [
-    "### Solving the task optimally (and using the ActionCostMetric)"
+    "### Solving the task optimally"
    ]
   },
   {
@@ -244,7 +254,7 @@
    "id": "4c40b76b",
    "metadata": {},
    "source": [
-    "Solving a task optimally can take substantially more time (intuitively, we do not only need to find a plan but also have to exclude that any other action sequence provides a better solution). Let's thus use a smaller example with 10 locations and 8 parcels. To make it a bit more interesting, we use operator costs and make some connections more expensive to travel."
+    "Solving a task optimally can take substantially more time (intuitively, we do not only need to find a plan but also have to exclude that any other action sequence provides a better solution). Let's thus use a smaller example with 10 locations and 8 parcels."
    ]
   },
   {
@@ -255,36 +265,7 @@
    "outputs": [],
    "source": [
     "graph, jobs, truck_location = generate_problem(10, 8)\n",
-    "small_problem = get_planning_task(graph, jobs, truck_location)\n",
-    "\n",
-    "if False: # TODO need to support action-costs requirement in the UP to handle this in the integration\n",
-    "    expensive_edges = random.sample(list(graph.edges), 5)\n",
-    "    Location = small_problem.user_type(\"Location\")\n",
-    "    move_cost = Fluent(\"move_cost\", IntType(), from_loc=Location, to_loc=Location)\n",
-    "    small_problem.add_fluent(move_cost, default_initial_value=Int(1))\n",
-    "    for l1, l2 in expensive_edges:\n",
-    "        loc1 = small_problem.object(\"loc%s\" % l1)\n",
-    "        loc2 = small_problem.object(\"loc%s\" % l2)\n",
-    "        small_problem.set_initial_value(move_cost(loc1, loc2), Int(3))\n",
-    "        small_problem.set_initial_value(move_cost(loc2, loc1), Int(3))\n",
-    "\n",
-    "    move = small_problem.action(\"move\")\n",
-    "    m = MinimizeActionCosts({move : move_cost(move.l_from, move.l_to)}, default=Int(1))\n",
-    "    small_problem.clear_quality_metrics()\n",
-    "    small_problem.add_quality_metric(m)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ba8315b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from unified_planning.io import PDDLWriter\n",
-    "# w = PDDLWriter(small_problem)\n",
-    "# print(w)\n",
-    "# print(small_problem,kind)"
+    "small_problem = get_planning_task(graph, jobs, truck_location)"
    ]
   },
   {
@@ -341,7 +322,8 @@
     "        if result.status == up.engines.PlanGenerationResultStatus.INTERMEDIATE:\n",
     "            print(\"Found an intermediate plan of length:\", len(result.plan.actions))\n",
     "            print(\"Continue searching...\")\n",
-    "        elif result.status == up.engines.PlanGenerationResultStatus.SOLVED_SATISFICING:\n",
+    "        elif result.status in (up.engines.PlanGenerationResultStatus.SOLVED_SATISFICING,\n",
+    "                               up.engines.PlanGenerationResultStatus.SOLVED_OPTIMALLY):\n",
     "            print(\"The final plan has length:\", len(result.plan.actions))\n",
     "            print(result.plan)\n",
     "        else:\n",
@@ -614,6 +596,126 @@
     "            print(result.status)\n",
     "            print(\"No plan found.\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91f895c4",
+   "metadata": {},
+   "source": [
+    "## Grounding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2a9b71a",
+   "metadata": {},
+   "source": [
+    "Fast Downward also provides the compilation operation mode for grounding. Internally, Fast Downward does not only ground the instance but also normalizes the actions into a certain syntactic form. We provide two variants:\n",
+    "- The ``fast-downward-reachability-grounder`` uses the reachability analysis of Fast Downward to determine what actions needs to be instantiated but preserves their structure.\n",
+    "- The ``FastDownwardGrounder`` returns the normalized grounded task as used within Fast Downward.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "062e40be",
+   "metadata": {},
+   "source": [
+    "**Important advice**: Do *not* ground the task with the UP and afterwards solve it with the FastDownard solver engines. Some parts of Fast Downward (the invariant synthesis) are much faster with a schematic representation of operators."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e7ed478",
+   "metadata": {},
+   "source": [
+    "To illustrate how the grounders are used, we create a really small problem (the ground problem is exponentially larger and we want to keep output readable)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3330d92b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tiny_graph, tiny_jobs, tiny_truck_location = generate_problem(4, 2) # 4 locations, 2 parcels\n",
+    "tiny_problem = get_planning_task(tiny_graph, tiny_jobs, tiny_truck_location)\n",
+    "nx.draw_networkx(tiny_graph, with_labels=True) # uncomment if you do not have matplotlib\n",
+    "print(\"Jobs:\")\n",
+    "for parcel_id, (origin, destination) in enumerate(tiny_jobs):\n",
+    "    print('Parcel', parcel_id, 'from location', origin,\n",
+    "          'to location', destination) \n",
+    "print('The truck is at location', tiny_truck_location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abf0e19d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with Compiler(name = \"fast-downward-reachability-grounder\") as grounder:\n",
+    "    grounder_result = grounder.compile(\n",
+    "        tiny_problem, \n",
+    "        CompilationKind.GROUNDING\n",
+    "    )\n",
+    "    ground_problem = grounder_result.problem\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ba0087e",
+   "metadata": {},
+   "source": [
+    "If we now have a look at the actions of the ground problem, we see that the actions do not have parameters anymore but instead we have actions for the truckmovements between each two actions and loading and unloading each parcel at their respective origin and goal locations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f5084f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(ground_problem.actions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d4067d9",
+   "metadata": {},
+   "source": [
+    "We can now solve the ground problem and translate the plan back to one for the original problem:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d08c132",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with OneshotPlanner(name = \"fast-downward\") as planner:\n",
+    "    ground_plan = planner.solve(ground_problem).plan\n",
+    "print(\"We found the following plan for the ground instance:\")\n",
+    "print(ground_plan)\n",
+    "\n",
+    "# Translate plan back to one for the original problem\n",
+    "plan = ground_plan.replace_action_instances(grounder_result.map_back_action_instance)\n",
+    "\n",
+    "print(\"\\nThis corresponds to the following plan for the original problem:\")\n",
+    "print(plan)\n",
+    "\n",
+    "# Verify that it is indeed a plan for the original problem, using the plan validator operation mode of the UP\n",
+    "print(\"\\nCan we verify this?\")\n",
+    "from unified_planning.engines import ValidationResultStatus\n",
+    "with PlanValidator(problem_kind = tiny_problem.kind) as validator:\n",
+    "    if validator.validate(tiny_problem, plan).status == ValidationResultStatus.VALID:\n",
+    "        print(\"Yes!!\")\n",
+    "    else:\n",
+    "        print(\"No?!? This should not happen.\")"
    ]
   }
  ],
