--- a/notebooks/usage-examples.ipynb
+++ b/notebooks/usage-examples.ipynb
@@ -11,11 +11,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "051d33fd",
+   "id": "ada9e72e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --pre unified-planning[fast-downward]"
+    "!pip install --pre unified-planning\n",
+    "!pip install up_fast_downward"
    ]
   },
   {
@@ -600,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91f895c4",
+   "id": "e45ab282",
    "metadata": {},
    "source": [
     "## Grounding"
@@ -608,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2a9b71a",
+   "id": "fb29da35",
    "metadata": {},
    "source": [
     "Fast Downward also provides the compilation operation mode for grounding. Internally, Fast Downward does not only ground the instance but also normalizes the actions into a certain syntactic form. We provide two variants:\n",
@@ -618,7 +619,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "062e40be",
+   "id": "e8cdb4a8",
    "metadata": {},
    "source": [
     "**Important advice**: Do *not* ground the task with the UP and afterwards solve it with the FastDownard solver engines. Some parts of Fast Downward (the invariant synthesis) are much faster with a schematic representation of operators."
@@ -626,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e7ed478",
+   "id": "632a2b4c",
    "metadata": {},
    "source": [
     "To illustrate how the grounders are used, we create a really small problem (the ground problem is exponentially larger and we want to keep output readable)."
@@ -635,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3330d92b",
+   "id": "b091603e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abf0e19d",
+   "id": "a2081290",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ba0087e",
+   "id": "fdccfc60",
    "metadata": {},
    "source": [
     "If we now have a look at the actions of the ground problem, we see that the actions do not have parameters anymore but instead we have actions for the truckmovements between each two actions and loading and unloading each parcel at their respective origin and goal locations."
@@ -675,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f5084f2",
+   "id": "ca76f439",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d4067d9",
+   "id": "8d850f1f",
    "metadata": {},
    "source": [
     "We can now solve the ground problem and translate the plan back to one for the original problem:"
@@ -693,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d08c132",
+   "id": "2b390c96",
    "metadata": {},
    "outputs": [],
    "source": [
